# modelping

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  backpopulate.py  pyproject.toml  run_ottawa.py
.github/scripts/: bundle_and_submit.py  run_pipeline.py  run_stt.py  run_tts.py
.github/workflows/: benchmark.yml
modelping/: __init__.py  cli.py  config.py  metrics.py  models.py  output.py  pipeline_runner.py  runner.py
modelping/providers/: __init__.py  anthropic.py  base.py  cohere.py  fireworks.py  google.py  groq.py  mistral.py  openai.py  polargrid.py  together.py
modelping/providers/stt/: __init__.py  assemblyai_stt.py  base.py  deepgram_stt.py  gladia_stt.py  groq_stt.py  openai_stt.py
modelping/providers/tts/: __init__.py  base.py  cartesia_tts.py  deepgram_tts.py  elevenlabs_tts.py  fish_audio_tts.py  lmnt_tts.py  openai_tts.py  playht_tts.py
modelping/utils/: __init__.py  audio.py
tests/: test_metrics.py  test_providers.py  test_stt_tts.py
