[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelping"
version = "0.1.0"
description = "⚡ Latency benchmarks for LLM inference providers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "modelping contributors"},
]
keywords = ["llm", "latency", "benchmark", "ai", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
modelping = "modelping.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["modelping"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
