[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelping"
version = "0.1.0"
description = "⚡ Benchmark LLM, STT, TTS, and full voice pipeline latency across every major AI provider"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LatencyGrid", email = "hello@latencygrid.dev"},
]
keywords = ["llm", "latency", "benchmark", "ai", "inference", "tts", "stt", "voice-ai", "mlops", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://latencygrid.dev"
Repository = "https://github.com/LatencyGrid/modelping"
"Bug Tracker" = "https://github.com/LatencyGrid/modelping/issues"

[project.scripts]
modelping = "modelping.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["modelping"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
